blurry loading html structure

--- a/index.html
+++ b/index.html
@@ -22,23 +22,16 @@
 <body>
   <!--container start-->
   <div class="container">
-    <!--header section start-->
-    <header>
-      
-    </header>
-    <!--header section start-->
     <!--main section start-->
     <main>
-
+       <section class="blurry-loading">
+        <figure>
+          <img src="./images/aisvri-2xPi7XObxxo-unsplash.jpg" alt="Background-Image">
+        </figure>
+       </section>
+       <div class="incremental-text">0%</div>
     </main>
     <!--main section end-->
-
-    <!--footer section start-->
-    <footer>      
-
-    </footer>
-    <!--footer section end-->
-
   </div>
   <!--container end-->
   <script src="assets/js/script.js"></script>
