--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!doctype html>
 <!-- If multi-language site, reconsider usage of html lang declaration here. -->
-<html lang="en"> 
+<html lang="en">
 
 <head>
   <meta charset="utf-8">
@@ -13,10 +13,10 @@
   <!-- Place favicon.ico in the root directory: mathiasbynens.be/notes/touch-icons -->
   <link rel="shortcut icon" href="favicon.ico" />
   <!--font-awesome link for icons-->
-  <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css" >
+  <link rel="stylesheet" media="screen" href="assets/vendor/font-awesome/css/all.min.css">
   <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/4.7.0/css/font-awesome.min.css">
   <!-- Default style-sheet is for 'media' type screen (color computer display).  -->
-  <link rel="stylesheet" media="screen" href="assets/css/style.css" >
+  <link rel="stylesheet" media="screen" href="assets/css/style.css">
 </head>
 
 <body>
@@ -24,16 +24,19 @@
   <div class="container">
     <!--main section start-->
     <main>
-       <section class="blurry-loading">
-        <figure>
-          <img src="./images/aisvri-2xPi7XObxxo-unsplash.jpg" alt="Background-Image">
-        </figure>
-       </section>
-       <div class="incremental-text">0%</div>
+      <section class="blurry-loading">
+        <div class="wrapper">
+          <figure>
+            <img src="./images/aisvri-2xPi7XObxxo-unsplash.jpg" alt="Background-Image">
+          </figure>
+        </div>
+      </section>
+      <div class="incremental-text">0%</div>
     </main>
     <!--main section end-->
   </div>
   <!--container end-->
   <script src="assets/js/script.js"></script>
 </body>
+
 </html>
