blurry loading js feature add

--- a/index.html
+++ b/index.html
@@ -24,14 +24,14 @@
   <div class="container">
     <!--main section start-->
     <main>
-      <section class="blurry-loading">
+      <section class="blurry_loading">
         <div class="wrapper">
           <figure>
             <img src="./images/aisvri-2xPi7XObxxo-unsplash.jpg" alt="Background-Image">
           </figure>
         </div>
       </section>
-      <div class="incremental-text">0%</div>
+      <div class="incremental_text">0%</div>
     </main>
     <!--main section end-->
   </div>
